# semantic-chunker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
scripts/: update_dependencies.py
semantic_chunker/: __init__.py
tests/: semantic_chunker_test.py
